--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ body{
   min-height:100vh;
   background:
     linear-gradient(rgba(5,16,5,.78),rgba(5,16,5,.78)),
-    url("img/unnamed.png") center/cover fixed no-repeat;
+    url("back.jpeg") center/cover fixed no-repeat;
   user-select:none;
 }
 
@@ -154,7 +154,7 @@ body{
       <p class="text-white-400 text-sm sm:text-base">
         Real-Time Picks • Live Coverage • Instant Access
       </p>
-      <p class="text-yellow-600 mb-6">33K+ Active Members</p>
+      <p class="text-yellow-600 mb-6">73K+ Active Members</p>
     
       <div class="grid grid-cols-3 gap-3 mb-8">
         <div class="glass-card rounded-xl  text-center border-2 border-cricket-green-500/30 hover:border-cricket-gold-400/50">
@@ -251,3 +251,4 @@ document.addEventListener('dragstart',e=>e.preventDefault());
 
 </body>
 </html>
+
